05-applications-and-projects/directory-of-files/springapp/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sapp
  template:
    metadata:
      labels:
        app: sapp
    spec:
      containers:
      - image: lerndevops/samples:springboot-app
        name: springboot-app
