05-applications-and-projects/directory-of-files/springapp/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-app-svc
spec:
  type: NodePort
  ports:
   - port: 80
     targetPort: 8080
  selector:
    app: sapp
