05-applications-and-projects/directory-of-files/springapp/mongodb-svc.yaml
apiVersion: v1
kind: Service
metadata:
   name: mongo
spec:
   type: ClusterIP
   ports:
    - port: 27017
      targetPort: 27017
   selector:
     app: mongodb
